Fixed title-alignments and added ignore for NuGet-packages. Also unchecked "Apply server settings to all users (store in project file)" in project settings (this applies to VS2015).

--- a/BuildMonitor/Content/Site.css
+++ b/BuildMonitor/Content/Site.css
@@ -59,6 +59,7 @@ html * {
 .projectTitle {
 	color: #777;
 	margin-top: -12px;
+	display: inline-block;
 }
 
 .buildTitle {
